[tool.poetry]
name = "Radium"
version = "0.1.0"
description = ""
authors = ["Valerij Ezhov <ezhov.fzzz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
wemake-python-styleguide = "^0.17.0"
isort = "^5.12.0"
nitpick = "^0.32.0"
requests-cache = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
